# self_learn

./: .clang-format  .gitignore  CMakeLists.txt  Jenkinsfile  blacklist.txt  main.cpp
exercises/: CMakeLists.txt  main_testing.cpp
exercises/lib/: CMakeLists.txt
exercises/lib/exercises/: Factories.h  TheLifeAnswer.cpp  TheLifeAnswer.h
exercises/lib/exercises/factories/shapes/: Shape.h
exercises/ut/: CMakeLists.txt  ShapeFactoryTests.cpp  SimpleLambdaTests.cpp  TheLifeAnswerTest.cpp  file_reader.cpp  hpt.cpp
exercises/ut/cpp11_features/: AliasesTests.cpp  AttributesTests.cpp  AutoTests.cpp  ChronoTuplesTieTests.cpp  ClassTweaksTests.cpp  ConstexprTests.cpp  DelegatingConstructorsTests.cpp  EnumClassTests.cpp  ExplicitConversionFuncTests.cpp  InitializerListsTests.cpp  MoveConstructorTests.cpp  NullPtrTests.cpp  RValueReferencesTests.cpp  SimpleLambdaTests.cpp  StdMoveTests.cpp  StlFeaturesTests.cpp  UserDefinedLiteralsTests.cpp  VariadicTemplatesTests.cpp
exercises/ut/cpp14_features/: LambdaTests.cpp  TypeDeductionTests.cpp
libs/catch2/: CMakeLists.txt  catch.hpp
scripts/: prepare_build.sh
small_programs/: CMakeLists.txt
small_programs/tail/: CMakeLists.txt
small_programs/tail/source/: CMakeLists.txt
small_programs/tail/source/tail/: tail.cpp  tail.h  tailmain.cpp  validation.cpp  validation.h
small_programs/tail/ut/: CMakeLists.txt  TailTests.cpp  ValidationTests.cpp  tailTests.cpp
